--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/mabusf/test-publish/issues"
   },
-  "homepage": "https://github.com/mabusf/test-publish#readme"
+  "homepage": "https://github.com/mabusf/test-publish#readme",
+  "devDependencies": {
+    "semantic-release": "^17.4.3"
+  }
 }
