--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,14 +26,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: check version with shell
-        run: echo node -p "require('./package.json').version"
+        run: echo $node -p "require('./package.json').version"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v1.4.5 # ${{ github.ref }}
+          tag_name: v1.4.6 # ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
