--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          node-version: "12.x"
       - name: check version with shell
         run: $version = node -p "require('./package.json').version"
       - name: Create Release
