--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          node-version: "12.x"
       - name: check version with shell
+        shell: pwsh
         run: $version = node -p "require('./package.json').version"
       - name: Create Release
         id: create_release
