--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,8 @@ jobs:
       - name: check version with shell
         shell: pwsh
         run: $version = node -p "require('./package.json').version"
+      - name: printing version
+        run: echo $version
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
