--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,7 @@ jobs:
         uses: actions/checkout@v2
       - name: check version with shell
         shell: pwsh
-        run: $version = node -p "require('./package.json').version"
-             echo $version
+        run: node -p "require('./package.json').version"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
