--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v2
       - name: check version with shell
         shell: pwsh
-        run: node -p "require('./package.json').version"
+        run: version = node -p "require('./package.json').version"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
