--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,9 @@ jobs:
         uses: actions/checkout@v2
       - name: check version with shell
         shell: pwsh
-        run: version = node -p "require('./package.json').version"
+        run: | 
+          $version = node -p "require('./package.json').version"
+          $version
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
