--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,10 @@ jobs:
         uses: actions/checkout@v2
       - name: check version with shell
         shell: pwsh
-        run: | 
+        run: 
           $version = node -p "require('./package.json').version"
+      - name: print version
+        run:
           $version
       - name: Create Release
         id: create_release
