--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: v1.4.6 # ${{ github.ref }}
+          tag_name: v ${{ version }}
+#           tag_name: v1.4.6 # ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
