--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
           $version = node -p "require('./package.json').version"
       - name: print version
         run:
-          $version
+          ${{ version }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
