--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,9 @@ jobs:
         uses: actions/checkout@v2
       - name: check version with shell
         shell: pwsh
-        run: 
+        run: |
           $version = node -p "require('./package.json').version"
-      - name: print version
-        run:
-          ${{ version }}
+          $version
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
