--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
-    env:
-      VERSION: 1.4.7
+#     env:
+#       VERSION: 1.4.7
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -36,10 +36,10 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ env.VERSION }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
 #           tag_name: node -p "require('./package.json').version"
-          tag_name: salut # ${{ github.ref }}
+          tag_name: ${{env.VERSION}} # ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
