--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
-#     env:
-#       VERSION: 1.4.7
+    env:
+      VERSION: 1.4.7
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
