--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
 #           tag_name: node -p "require('./package.json').version"
-          tag_name: ${{env.VERSION}} # ${{ github.ref }}
+          tag_name: v${{env.VERSION}} # ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
