--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERSION: 1.4.7
+      
     steps:
+      - name: bla
+        if: ${{ env.VERSION == 1.4.7 }}
+        run: echo hello
       - name: Checkout code
         uses: actions/checkout@v2
       - name: check version with shell
