--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
       - name: bla
         if: ${{ env.VERSION == 1.4.7 }}
-        run: echo hello
+        run: echo "hello"
       - name: Checkout code
         uses: actions/checkout@v2
       - name: check version with shell
