--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
     steps:
       - name: bla
         if: ${{ env.VERSION == '1.4.7' }}
+        shell: pwsh
         run: echo "hello"
       - name: Checkout code
         uses: actions/checkout@v2
