--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,9 @@ jobs:
       - name: bla
         if: ${{ env.VERSION == '1.4.7' }}
         shell: pwsh
-        run: echo "hello"
+        run: |
+          $vers = node -p "require('./package.json').version"
+          $vers
       - name: Checkout code
         uses: actions/checkout@v2
       - name: check version with shell
