--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
     env:
       VERSION: 1.4.7
     steps:
-#       - name: bla
-#         if: ${{ env.VERSION == '1.4.7' }}
+      - name: bla
+        if: ${{ env.VERSION == '1.4.7' }}
 #         shell: pwsh
 #         run: |
 #           $vers = node -p "require('./package.json').version"
@@ -38,7 +38,7 @@ jobs:
         run: |
           $VERSION = node -p "require('./package.json').version"
           $VERSION
-          env.VERSION = $VERSION
+          ${{ env.VERSION = $VERSION }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
