--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,10 @@ jobs:
     name: Create Release
     runs-on: ubuntu-latest
     env:
-      VERSION: 1.4.7
+      VERSION: 1.0.0
     steps:
-      - name: bla
-        if: ${{ env.VERSION == '1.4.7' }}
+#       - name: bla
+#         if: ${{ env.VERSION == '1.4.7' }}
 #         shell: pwsh
 #         run: |
 #           $vers = node -p "require('./package.json').version"
@@ -38,7 +38,6 @@ jobs:
         run: |
           $VERSION = node -p "require('./package.json').version"
           $VERSION
-          ${{ env.VERSION = $VERSION }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -52,5 +51,5 @@ jobs:
             Changes in this Release
             - First Change
             - Second Change
-          draft: false
-          prerelease: false
+          draft: true
+          prerelease: true
