--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
-    env:
-      VERSION: 1.0.0
+#     env:
+#       VERSION: 1.0.0
     steps:
 #       - name: bla
 #         if: ${{ env.VERSION == '1.4.7' }}
@@ -38,6 +38,9 @@ jobs:
         run: |
           $VERSION = node -p "require('./package.json').version"
           $VERSION
+          echo "This is the version number bro"
+          echo "VERSION=$version"
+          echo "{{ env.VERSION }}
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
