--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           $VERSION
           echo "This is the version number bro"
           echo "VERSION=$version"
-          echo "{{ env.VERSION }}
+          echo "{{ env.VERSION }}"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
