--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           $VERSION
           echo "This is the version number bro"
           echo "VERSION=$version" > $GITHUB_ENV
-          echo "{{ env.VERSION }}"
+          echo "${{ env.VERSION }}"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -49,7 +49,8 @@ jobs:
         with:
 #           tag_name: node -p "require('./package.json').version"
           tag_name: v${{env.VERSION}} # ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: v${{env.VERSION}}
+#           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
             - First Change
