--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,15 +22,9 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
-#     env:
-#       VERSION: 1.0.0
+    env:
+      VERSION: 1.0.0
     steps:
-#       - name: bla
-#         if: ${{ env.VERSION == '1.4.7' }}
-#         shell: pwsh
-#         run: |
-#           $vers = node -p "require('./package.json').version"
-#           $vers
       - name: Checkout code
         uses: actions/checkout@v2
       - name: check version with shell
@@ -57,4 +51,4 @@ jobs:
             - First Change
             - Second Change
           draft: true
-          prerelease: true
+          prerelease: false
