--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
           echo "VERSION=$version" > $GITHUB_ENV
           echo "${{ env.VERSION }}"
           ${{ env.VERSION }}
-          echo $version | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+          echo "$VERSION=version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
