--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
           echo "${{ env.VERSION }}"
           ${{ env.VERSION }}
           echo "$VERSION=version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+          echo "${{ env.VERSION }}"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
