--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,6 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
-#     env:
-#       VERSION: 1.0.0
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -33,19 +31,16 @@ jobs:
           $version = node -p "require('./package.json').version"
           $version
           echo "This is the version number bro"
-          echo "VERSION=$version" > $GITHUB_ENV
           echo "VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
           echo "${{ env.VERSION }}"
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token comes from package.json
         with:
-#           tag_name: node -p "require('./package.json').version"
           tag_name: v${{env.VERSION}} # ${{ github.ref }}
           release_name: v${{env.VERSION}}
-#           release_name: Release ${{ github.ref }}
           body: |
             Changes in this Release
             - First Change
