--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token comes from package.json
         with:
-          tag_name: v${{env.VERSION}} 
+          tag_name: v${{env.VERSION}} - ${{ GITHUB_SHA }}
           release_name: v${{env.VERSION}}
           draft: true
           prerelease: false
