--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,14 +35,16 @@ jobs:
           echo "${{ env.VERSION }}"
       - name : Getting commit hash
         run: |
+          echo "${{ env.COMMIT_SHA }}"
           echo "Deploying to production server on branch $GITHUB_SHA"
+          echo "$COMMIT_SHA=$GITHUB_SHA" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token comes from package.json
         with:
-          tag_name: v${{env.VERSION}} - ${{ env.GITHUB_SHA }}
+          tag_name: v${{env.VERSION}} - $GITHUB_SHA
           release_name: v${{env.VERSION}}
           draft: true
           prerelease: false
