--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
         run: |
           echo "Deploying to production server on branch $GITHUB_SHA"
           echo "$sha = $GITHUB_SHA"
+          echo "The sha: "
+          $sha
 #          echo "COMMIT_SHA=$GITHUB_SHA" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
       - name: Create Release
         id: create_release
