--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,18 +37,17 @@ jobs:
         run: |
           echo "Deploying to production server on branch $GITHUB_SHA"
           echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
-          echo "The sha: "
       - name: Printing commit hash
         run: |
+          echo "The sha: "
           echo "${{env.SHORT_SHA}}"
-#          echo "COMMIT_SHA=$GITHUB_SHA" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token comes from package.json
         with:
-          tag_name: v${{env.VERSION}}
-          release_name: v${{env.VERSION}}
+          tag_name: v${{env.VERSION}} - ${{env.SHORT_SHA}}
+          release_name: v${{env.VERSION}} - ${{env.SHORT_SHA}}
           draft: true
           prerelease: false
