--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       - name : Getting commit hash
         shell: bash
         run: |
-          echo "COMMIT_SHA=`echo ${GITHUB_SHA}` | cut -c1-8 >> $GITHUB_ENV"
+          echo "COMMIT_SHA=`echo ${GITHUB_SHA}` | cut -c1-8" >> $GITHUB_ENV
       - name: Printing commit hash 8 first characters
         run: |
           echo "The sha: "
