--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,12 @@ jobs:
         run: |
           echo "The sha: "
           echo "${{env.COMMIT_SHA}}"
+      - name: navigating
+        with: 
+          node-version: "12.x"
+          run: |
+            mkdir test
+            ls -a
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
