--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
       - uses: actions/setup-node@v1
         with: 
           node-version: "12.x"
-          run: |
+      - run: |
             mkdir test
             ls -a
       - name: Create Release
