--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,8 @@ jobs:
             mkdir test
             ls
             cp index.js ./test
+            cd test
+            ls
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
