--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token comes from package.json
         with:
+          bodyFile: index.js
           tag_name: v${{env.VERSION}} 
           release_name: v${{env.VERSION}}
           draft: true
