--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token comes from package.json
         with:
+          artifacts: "release.zip"
+          bodyFile: index.js
           tag_name: v${{env.VERSION}}-${{env.COMMIT_SHA}} # ex: v1.0.0-abcd1234
           release_name: v${{env.VERSION}}-${{env.COMMIT_SHA}} # same as tag_name
           draft: true
