--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,7 @@ jobs:
         run: |
           echo "The sha: "
           echo "${{env.COMMIT_SHA}}"
-      - name: Create Release
-        id: create_release
+      - name: navigating
         uses: actions/setup-node@v1
         with: 
           node-version: "12.x"
@@ -52,6 +51,10 @@ jobs:
             cd test
             ls
             cd ..
+      - name: Create Release
+        id: create_release
+      - name: create_release
+      - id: create_release
       - uses: actions/create-release@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token comes from package.json
@@ -61,8 +64,7 @@ jobs:
           tag_name: v${{env.VERSION}}-${{env.COMMIT_SHA}} # ex: v1.0.0-abcd1234
           release_name: v${{env.VERSION}}-${{env.COMMIT_SHA}} # same as tag_name
           draft: true
-          prerelease: false
-#         
+          prerelease: false        
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
