--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,3 +63,13 @@ jobs:
           asset_content_type: application/zip
 
 
+# - name: navigating
+#         uses: actions/setup-node@v1
+#         with: 
+#           node-version: "12.x"
+#       - run: |
+#             mkdir test
+#             ls
+#             cp index.js ./test
+#             cd test
+#             ls
