--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,7 @@ jobs:
           asset_path: ./test.zip
           asset_name: test.zip
           asset_content_type: application/zip
+          draft: true
 
 
 # - name: navigating
