--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,15 +41,7 @@ jobs:
         run: |
           echo "The sha: "
           echo "${{env.COMMIT_SHA}}"
-      - name: navigating
-        uses: actions/setup-node@v1
-        with: 
-          node-version: "12.x"
-      - run: |
-          echo "before ls"
-          ls
-          rm index.js
-          ls
+          dir
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
